# point-plan

./: .gitignore  Dockerfile  app.Dockerfile  docker-compose.yaml  nginx.conf
app/: .gitignore  capacitor.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
app/android/: capacitor.settings.gradle
app/ios/App/: Podfile
app/ios/App/App/: Info.plist
app/ios/App/App.xcodeproj/: project.pbxproj
app/src/: App.tsx  index.html  main.tsx  store.ts
app/src/api/: chat.ts  data.ts  index.ts  user.ts
app/src/components/: ChatBot.tsx
app/src/pages/: Chat.css  Chat.tsx  Home.tsx  Library.tsx  Login.tsx  Map.css  Map.tsx  Radio.tsx  Search.tsx  Settings.tsx  Signup.tsx
app/src/server-api/: chat.ts
app/src/store/: onBoarding.ts  user.ts
app/src/theme/: color.css  tab-bar.css  tool-bar.css
server/: pyproject.toml
server/server/: __init__.py  env.py
server/server/v1/: __init__.py  chat.py  data.py  database.py  user.py
